# Stitched

./: .gitmodules  CMakeLists.txt  README.md  env-from-spack
DataFormats/: CMakeLists.txt
DataFormats/Common/: CMakeLists.txt
DataFormats/Common/test/: CMakeLists.txt
DataFormats/FEDRawData/: CMakeLists.txt
DataFormats/FEDRawData/test/: CMakeLists.txt
DataFormats/FWLite/: CMakeLists.txt
DataFormats/FWLite/test/: BuildFile.xml  CMakeLists.txt
DataFormats/Provenance/: CMakeLists.txt
DataFormats/Provenance/test/: BuildFile.xml  CMakeLists.txt
DataFormats/StdDictionaries/: CMakeLists.txt
DataFormats/Streamer/: CMakeLists.txt
DataFormats/TestObjects/: CMakeLists.txt
DataFormats/TestObjects/test/: BuildFile.xml  CMakeLists.txt
DataFormats/WrappedStdDictionaries/: CMakeLists.txt
FWCore/: CMakeLists.txt
FWCore/Catalog/: CMakeLists.txt
FWCore/Catalog/test/: CMakeLists.txt
FWCore/Common/: CMakeLists.txt
FWCore/Concurrency/: CMakeLists.txt
FWCore/Concurrency/test/: CMakeLists.txt
FWCore/FWLite/: CMakeLists.txt
FWCore/FWLite/test/: BuildFile.xml  CMakeLists.txt
FWCore/Framework/: CMakeLists.txt
FWCore/Framework/test/: CMakeLists.txt
FWCore/Integration/: CMakeLists.txt
FWCore/Integration/test/: CMakeLists.txt
FWCore/MessageLogger/: CMakeLists.txt
FWCore/MessageService/: CMakeLists.txt
FWCore/MessageService/plugins/: CMakeLists.txt
FWCore/MessageService/test/: CMakeLists.txt
FWCore/Modules/: CMakeLists.txt
FWCore/Modules/test/: CMakeLists.txt
FWCore/ParameterSet/: CMakeLists.txt
FWCore/ParameterSet/test/: CMakeLists.txt
FWCore/ParameterSetReader/: CMakeLists.txt
FWCore/PluginManager/: CMakeLists.txt
FWCore/PluginManager/test/: CMakeLists.txt
FWCore/PrescaleService/: CMakeLists.txt
FWCore/PrescaleService/plugins/: CMakeLists.txt
FWCore/PyDevParameterSet/: CMakeLists.txt
FWCore/PyDevParameterSet/test/: CMakeLists.txt
FWCore/PythonParameterSet/: CMakeLists.txt
FWCore/PythonParameterSet/test/: CMakeLists.txt
FWCore/SOA/: CMakeLists.txt
FWCore/SOA/test/: CMakeLists.txt
FWCore/ServiceRegistry/: CMakeLists.txt
FWCore/ServiceRegistry/test/: BuildFile.xml  CMakeLists.txt
FWCore/Services/: CMakeLists.txt
FWCore/Services/plugins/: CMakeLists.txt
FWCore/Services/test/: CMakeLists.txt
FWCore/Skeletons/: CMakeLists.txt
FWCore/Sources/: CMakeLists.txt
FWCore/TFWLiteSelector/: CMakeLists.txt
FWCore/TFWLiteSelector/test/: CMakeLists.txt
FWCore/TFWLiteSelectorTest/: CMakeLists.txt
FWCore/TestProcessor/: CMakeLists.txt
FWCore/TestProcessor/test/: CMakeLists.txt
FWCore/Utilities/: CMakeLists.txt
FWCore/Utilities/test/: CMakeLists.txt
FWCore/Version/: CMakeLists.txt
IOMC/: CMakeLists.txt
IOMC/RandomEngine/: CMakeLists.txt
IOMC/RandomEngine/plugins/: CMakeLists.txt
IOMC/RandomEngine/test/: BuildFile.xml  CMakeLists.txt
IOPool/: CMakeLists.txt
IOPool/Common/: CMakeLists.txt
IOPool/Common/test/: CMakeLists.txt
IOPool/Input/: CMakeLists.txt
IOPool/Input/test/: CMakeLists.txt
IOPool/Output/: CMakeLists.txt
IOPool/Output/plugins/: CMakeLists.txt
IOPool/Output/test/: CMakeLists.txt
IOPool/Provenance/: CMakeLists.txt
IOPool/SecondaryInput/: CMakeLists.txt
IOPool/SecondaryInput/test/: CMakeLists.txt
IOPool/Streamer/: CMakeLists.txt
IOPool/Streamer/plugins/: CMakeLists.txt
IOPool/Streamer/test/: CMakeLists.txt
IOPool/TFileAdaptor/: CMakeLists.txt
IOPool/TFileAdaptor/plugins/: CMakeLists.txt
IOPool/TFileAdaptor/test/: BuildFile.xml  CMakeLists.txt
SimDataFormats/: CMakeLists.txt
SimDataFormats/RandomEngine/: CMakeLists.txt
Utilities/: CMakeLists.txt
Utilities/General/: CMakeLists.txt
Utilities/General/test/: BuildFile.xml  CMakeLists.txt
Utilities/RFIOAdaptor/: CMakeLists.txt
Utilities/RFIOAdaptor/plugins/: CMakeLists.txt
Utilities/StorageFactory/: CMakeLists.txt
Utilities/StorageFactory/plugins/: CMakeLists.txt
Utilities/StorageFactory/test/: CMakeLists.txt
Utilities/Testing/: CMakeLists.txt
Utilities/Xerces/: CMakeLists.txt
Utilities/XrdAdaptor/: CMakeLists.txt
Utilities/XrdAdaptor/plugins/: CMakeLists.txt
