cmake_minimum_required(VERSION 3.0)
project(CMSSW)

include_directories(${CMAKE_SOURCE_DIR})
include_directories(/usr/include/)
find_package(CMakeTools)
UseCMakeTools()
find_package(ROOT 6.0.0 COMPONENTS Rint Thread Cling Core MathCore MathMore Matrix Minuit Physics MLP Foam Hist Spectrum Tree TreePlayer RIO XMLIO Net Gpad Graf Postscript Graf3d Eve RGL Gui GuiHtml Html EG Geom GeomBuilder PyROOT TMVA RooFitCore RooFit )
find_package(TBB)
find_package(XercesC)
find_package(CLHEP)
find_package(CppUnit)
find_package(CASTOR)
find_package(CMSMD5)
find_package(TINYXML)
set(Boost_NO_BOOST_CMAKE ON)
set(Boost_NO_SYSTEM_PATHS ON)
find_package(Boost 1.57.0 COMPONENTS filesystem thread iostreams python regex serialization system program_options )
find_package(PythonInterp)
find_package(PythonLibs)
include_directories(${PYTHON_INCLUDE_DIR})
include_directories(${Boost_INCLUDE_DIR}/python)
include_directories(${TINYXML_INCLUDE_DIR})
include_directories(${Boost_INCLUDE_DIR})
include_directories(${MD5_INCLUDE_DIR})
include_directories(${CASTOR_INCLUDE_DIRS})
include_directories(${CPPUNIT_INCLUDE_DIR})
include_directories(${CASTOR_INCLUDE_DIRS}/shift)
include_directories(${CLHEP_INCLUDE_DIR})
include_directories(${TBB_INCLUDE_DIRS})
include_directories(${ROOT_INCLUDE_DIR})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -Wno-attributes -Wno-deprecated-declarations -std=c++14")
add_subdirectory(DataFormats)
install(DIRECTORY DataFormats DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(FWCore)
install(DIRECTORY FWCore DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(IOMC)
install(DIRECTORY IOMC DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(IOPool)
install(DIRECTORY IOPool DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(SimDataFormats)
install(DIRECTORY SimDataFormats DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(Utilities)
install(DIRECTORY Utilities DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
install(FILES CMakeLists.txt README.md DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
install(DIRECTORY cmaketools DESTINATION ${CMAKE_INSTALL_PREFIX}/src PATTERN ".git" EXCLUDE)


