cmake_minimum_required(VERSION 3.12)
project(Framework VERSION 0.0.0 LANGUAGES C CXX)

find_package(ROOT 6.12.0 COMPONENTS Rint Thread Cling Core MathCore MathMore Matrix Minuit Minuit2 Physics MLP Foam Hist Spectrum Tree TreePlayer RIO XMLIO Net Gpad Graf Postscript Graf3d Eve RGL Gui GuiHtml Html EG Geom GeomBuilder PyROOT TMVA RooFitCore RooFit )
set(Boost_NO_BOOST_CMAKE ON)
set(Boost_NO_SYSTEM_PATHS ON)
find_package(Boost 1.67.0 COMPONENTS filesystem thread iostreams python27 regex serialization system program_options )
find_package(Python2 COMPONENTS Interpreter Development)
find_package(Threads)
find_package(CMakeTools)
UseCMakeTools()
find_package(XercesC)
find_package(UUID)
find_package(TINYXML2)
find_package(OpenSSL)
find_package(CMSMD5)
find_package(TBB)
find_package(CppUnit)
find_package(CLHEP)
include_directories(${XERCESC_INCLUDE_DIR})
include_directories(${TINYXML2_INCLUDE_DIR})
include_directories(${CATCH2_INCLUDE_DIR})
include_directories(${Boost_INCLUDE_DIR}/python)
include_directories(${VDT_INCLUDE_DIR})
include_directories(${MD5_INCLUDE_DIR})
include_directories(${XROOTD_INCLUDE_DIR}/xrootd)
include_directories(${CPPUNIT_INCLUDE_DIR})
include_directories(${JEMALLOC_INCLUDE_DIR})
include_directories(${Python2_INCLUDE_DIRS})
include_directories(${ZLIB_INCLUDE_DIR})
include_directories(${TCMALLOC_INCLUDE_DIR})
include_directories(${UUID_INCLUDE_DIR})
include_directories(${ROOT_INCLUDE_DIR})
include_directories(${XROOTD_INCLUDE_DIR})
include_directories(${TBB_INCLUDE_DIRS})
include_directories(${OPENSSL_INCLUDE_DIR})
include_directories(${Boost_INCLUDE_DIR})
include_directories(${Python2_INCLUDE_DIRS}/pybind11)
include_directories(${GSL_INCLUDE_DIR})
include_directories(${CLHEP_INCLUDE_DIR})
add_subdirectory(DataFormats)
install(DIRECTORY DataFormats DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(FWCore)
install(DIRECTORY FWCore DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(IOMC)
install(DIRECTORY IOMC DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(IOPool)
install(DIRECTORY IOPool DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(SimDataFormats)
install(DIRECTORY SimDataFormats DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(Utilities)
install(DIRECTORY Utilities DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(cmaketools)
install(DIRECTORY cmaketools DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
install(FILES CMakeLists.txt DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
install(DIRECTORY cmaketools DESTINATION ${CMAKE_INSTALL_PREFIX}/src PATTERN ".git" EXCLUDE)
install(DIRECTORY scram2cmake DESTINATION ${CMAKE_INSTALL_PREFIX}/src PATTERN ".git" EXCLUDE)
set(BUILD_TESTING ON)
include(CTest)
enable_testing()

