cmake_minimum_required(VERSION 3.12)
project(Framework VERSION 0.0.0 LANGUAGES C CXX)

find_package(ROOT 6.12.0 COMPONENTS Rint Thread Cling Core MathCore MathMore Matrix Minuit Minuit2 Physics MLP Foam Hist Spectrum Tree TreePlayer RIO XMLIO Net Gpad Graf Postscript Graf3d Eve RGL Gui GuiHtml Html EG Geom GeomBuilder PyROOT TMVA)
include(GNUInstallDirs)
include(${ROOT_USE_FILE})
include(GoogleTest)
set(Boost_NO_BOOST_CMAKE ON)
set(Boost_NO_SYSTEM_PATHS ON)
find_package(Boost 1.67.0 COMPONENTS filesystem thread iostreams python27 regex serialization system program_options )
find_package(Python2 COMPONENTS Interpreter Development)
find_package(Threads)
find_package(CMakeTools)
UseCMakeTools()
find_package(Xrootd)
find_package(CLHEP)
find_package(CMSMD5)
find_package(Catch2)
find_package(CppUnit)
find_package(OpenSSL)
find_package(TBB)
find_package(TINYXML2)
find_package(UUID)
find_package(XercesC)
add_subdirectory(DataFormats)
install(DIRECTORY DataFormats DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(FWCore)
install(DIRECTORY FWCore DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(IOMC)
install(DIRECTORY IOMC DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(IOPool)
install(DIRECTORY IOPool DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(SimDataFormats)
install(DIRECTORY SimDataFormats DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(Utilities)
install(DIRECTORY Utilities DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
add_subdirectory(cmaketools)
install(DIRECTORY cmaketools DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
install(FILES CMakeLists.txt DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
set(BUILDTEST True)
include(CTest)
enable_testing()
